tests/machine/x/c/group_by_multi_join.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/group_by_multi_join.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/group_by_multi_join.c:126:13: error: incompatible types when assigning to type ‘int’ from type ‘filteredItem’
  126 |             (filteredItem){.part = ps.part, .value = ps.cost * ps.qty};
      |             ^
/workspace/mochi/tests/machine/x/c/group_by_multi_join.c:132:32: error: invalid initializer
  132 |   list_filteredItem filtered = _t4;
      |                                ^~~
/workspace/mochi/tests/machine/x/c/group_by_multi_join.c:133:30: error: invalid initializer
  133 |   list_groupedItem grouped = 0;
      |                              ^
/workspace/mochi/tests/machine/x/c/group_by_multi_join.c:134:12: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘list_groupedItem’ [-Wformat=]
  134 |   printf("%d\n", grouped);
      |           ~^     ~~~~~~~
      |            |     |
      |            int   list_groupedItem

   1: #include <stdio.h>
